# scope-decoding

./: .gitignore  README.md  pyproject.toml  run.bat
outputs/2025-10-14/16-25-11/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2025-10-14/16-53-59/.hydra/: config.yaml  hydra.yaml  overrides.yaml
src/scope/: __init__.py  example.py  launcher.py  utils.py
src/scope/config/: config.py  config.yaml
src/scope/generation/: decoding.py  distributed.py  generation.py  preprocessing.py
