[project]
name = "scope"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Florian Le Bronnec", email = "flebronnec@outlook.fr" }
]
requires-python = ">=3.13"
dependencies = [
    "datasets>=3.5.0",
    "hydra-core>=1.3.2",
    "transformers>=4.50.3",
]

[project.scripts]
scope = "scope:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
